--- a/style.less
+++ b/style.less
@@ -697,6 +697,10 @@ div.shortUrl {
 	}
 }
 
+#query-builder-dd {
+	display: none;
+}
+
 #query-builder-dd:hover {
 	.dropdown-menu {
 		display: block;
